# BIDL

./: .gitignore  LICENSE  README.md  README_zh.md  requirements.txt  version.py
applications/classification/: README.md  README_zh.md  __init__.py
backbones/: __init__.py
backbones/ResNet_SNN/: ResNet_SNN.py  ResNet_SNNIt.py
backbones/VGG_SNN/: VGG7_SNN.py  VGG7_SNNIt.py  VGG7_SNNPlus.py
datasets/: __init__.py  base_dataset.py  base_dvsdataset.py  bidl_MNIST.py  bidl_babiqa.py  bidl_cifar10dvs.py  bidl_dvsgesture.py  bidl_dvsmnist.py  bidl_esimagenet.py  bidl_imdb.py  bidl_jester.py  bidl_luna16.py  bidl_rgbgesture.py  pre_imdb.py  pre_jester_csv.py  prepare_Luna16.py  utils.py
layers/: attention.py  base.py  gradient_approx.py  layers_split.py  lif.py  lifplus.py  stdp.py  temporal_aggregation.py  thresh_firing.py  time_distributed.py
losses/: accuracy.py  cross_entropy_loss.py  label_smooth_loss.py  utils.py
lynadapter/: build_run_lif.sh  lyn_compile.py  lyn_sdk_model.py  lyn_sdk_model_glb.py  lyn_sdk_model_multidevice.py  model_operate.py  warp_load_save.py
lynadapter/custom_op_in_pytorch/: CMakeLists.txt  build_so.sh  check_pytorch_version.py  custom_op_Rand.cpp  custom_op_Rand.h  custom_op_myLif.cpp  custom_op_myLif.h
requirements/: docs.txt  optional.txt  runtime.txt  tests.txt
tools/: apuinfer_mutidevice.py  complie_for_mp.py  dist_train.sh  profiler.md  test.py  test_glb.py  train.py
utils/: __init__.py  _convert_to_gif.py  _visual_metrics.py  apis.py  collate.py  config.py  flaskdemos.py  globals.py  logging.py  warm_up.py
(+264 files in other folders)
